--- a/html/index.html
+++ b/html/index.html
@@ -6,25 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:title"
-      content="React Quiz Project by Learn with Sumit"
+      content="React Quiz Project by Learn with Akshay"
     />
     <meta
       property="og:description"
-      content="React Quiz Project under Learn with Sumit React Tutorial Series playlist"
+      content="React Quiz Project under Learn with Akshay React Tutorial Series playlist"
     />
 
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/grid-list.css" />
 
-    <title>Home - Learn With Sumit</title>
+    <title>Home - Learn With Akshay</title>
   </head>
   <body>
     <nav class="nav">
       <ul>
         <li>
           <a href="index.html" class="brand">
-            <img src="./images/logo-bg.png" alt="Learn with Sumit Logo" />
-            <h3>Learn with Sumit</h3>
+            <img src="./images/logo-bg.png" alt="Learn with Akshay Logo" />
+            <h3>Learn with Akshay</h3>
           </a>
         </li>
       </ul>
